--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <p><br>
           Béatrice is a Toronto-based graphic designer <br>
-          in her third year at OCAD. Passionate about editorial and web design, she is always eager to explore new mediums!
+          in her fourth year at OCAD. Passionate about editorial and web design, she is always eager to explore new mediums!
         </p>
 
         <nav>
