--- a/project4.html
+++ b/project4.html
@@ -53,7 +53,7 @@
           <img src="images/p4/OMMATEUM-1.jpg" alt="Slide 1">
         </div>
         <div class="slide active">
-          <img src="images/p4/1.jpg" alt="Slide 2">
+          <img src="images/p4/OMMATEUM-19.jpg" alt="Slide 2">
         </div>
         <div class="slide">
           <img src="images/P4/OMMATEUM-11.jpg" alt="Slide 3">
