--- a/project4.html
+++ b/project4.html
@@ -50,10 +50,10 @@
       <!-- slideshow -->
       <div class="slideshow">
         <div class="slide active">
-          <img src="images/p4/OMMATEUM-1.jpg" alt="Slide 1">
+          <img src="images/p4/OMMATEUM-21.jpg" alt="Slide X">
         </div>
         <div class="slide active">
-          <img src="images/p4/OMMATEUM-19.jpg" alt="Slide 2">
+          <img src="images/p4/OMMATEUM-19.jpg" alt="Slide X">
         </div>
         <div class="slide">
           <img src="images/P4/OMMATEUM-11.jpg" alt="Slide 3">
