--- a/project4.html
+++ b/project4.html
@@ -49,11 +49,11 @@
 
       <!-- slideshow -->
       <div class="slideshow">
-        <div class="slide active">
-          <img src="images/p4/OMMATEUM-21.jpg" alt="Slide X">
+        <div class="slide">
+          <img src="images/p4/OMMATEUM-21.jpg" alt="Slide 1">
         </div>
-        <div class="slide active">
-          <img src="images/p4/OMMATEUM-19.jpg" alt="Slide X">
+        <div class="slide">
+          <img src="images/p4/OMMATEUM-19.jpg" alt="Slide 2">
         </div>
         <div class="slide">
           <img src="images/P4/OMMATEUM-11.jpg" alt="Slide 3">
