--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
         <p><br>
           Béatrice is a Toronto-based graphic designer <br>
-          in her fourth year at OCAD. Passionate about editorial and web design, she is always eager to explore new mediums!
+          in her fourth year at OCADU. Passionate about editorial, packaging, and web design, she is always eager to explore new mediums! 
+          <br><br>
+          Feel free to reach out in French or English.
         </p>
 
         <nav>
@@ -50,6 +52,7 @@
         <div class="contact">
           <p><a href="https://www.linkedin.com/in/beatricedlh/" target="_blank">LinkedIn</a></p>
           <p><a href="mailto:bdovallheureux@ocadu.com" target="_blank">Email</a></p>
+          <p><a href="images/Béatrice_DovalLHeureux-CV_2025_ENG.pdf" target="_blank">Resume</a></p>
         </div>
       </aside>
 
