--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="contact">
           <p><a href="https://www.linkedin.com/in/beatricedlh/" target="_blank">LinkedIn</a></p>
           <p><a href="mailto:bdovallheureux@ocadu.com" target="_blank">Email</a></p>
-          <p><a href="images/Béatrice_DovalLHeureux-CV_2025_ENG.pdf" target="_blank">Resume</a></p>
+          <p><a href="images/HOME/Béatrice_DovalLHeureux-CV_2025_ENG.pdf" target="_blank">Resume</a></p>
         </div>
       </aside>
 
