--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
           Béatrice is a Toronto-based graphic designer <br>
           in her fourth year at OCADU. Passionate about editorial, packaging, and web design, she is always eager to explore new mediums! 
           <br><br>
-          Feel free to reach out in French or English.
+          Portfolio currently underway but feel free to reach out in French or English.
         </p>
 
         <nav>
           <ul>
-            <li><br><a href="project4.html" class="preview-link" data-image="images/icon-2.png">Ommateum, 2025</a></li>
-            <li><a href="project5.html" class="preview-link" data-image="images/icon.png">7-7-7, 2024</a></li>
-            <li><a href="project3.html" class="preview-link" data-image="images/icon.png">HookedOn, 2023</a></li>
-            <li><a href="project1.html" class="preview-link" data-image="images/icon.png">Swiss Design Talks, 2023</a></li>
-            <li><a href="project2.html" class="preview-link" data-image="images/icon-2.png">ABCs of Type, 2023</a></li>
+            <li><br><a href="project4.html" class="preview-link" data-image="images/icon-2.png">Ommateum  (2025)</a></li>
+            <li><a href="project5.html" class="preview-link" data-image="images/icon.png">7-7-7  (2024)</a></li>
+            <li><a href="project3.html" class="preview-link" data-image="images/icon.png">HookedOn  (2023)</a></li>
+            <li><a href="project1.html" class="preview-link" data-image="images/icon.png">Swiss Design Talks  (2023)</a></li>
+            <li><a href="project2.html" class="preview-link" data-image="images/icon-2.png">ABCs of Type  (2023)</a></li>
           </ul>
         </nav>
 
