--- a/project4.html
+++ b/project4.html
@@ -29,11 +29,11 @@
 
       <nav>
         <ul>
-          <li><a href="project4.html" class="preview-link" data-image="images/icon-2.png">Ommateum, 2025</a></li>
-            <li><a href="project5.html" class="preview-link" data-image="images/icon.png">7-7-7, 2024</a></li>
-            <li><a href="project3.html" class="preview-link" data-image="images/icon.png">HookedOn, 2023</a></li>
-            <li><br><a href="project1.html" class="preview-link" data-image="images/icon.png">Swiss Design Talks, 2023</a></li>
-            <li><a href="project2.html" class="preview-link" data-image="images/icon-2.png">ABCs of Type, 2023</a></li>
+          <li><br><a href="project4.html" class="preview-link" data-image="images/icon-2.png">Ommateum  (2025)</a></li>
+          <li><a href="project5.html" class="preview-link" data-image="images/icon.png">7-7-7  (2024)</a></li>
+          <li><a href="project3.html" class="preview-link" data-image="images/icon.png">HookedOn  (2023)</a></li>
+          <li><a href="project1.html" class="preview-link" data-image="images/icon.png">Swiss Design Talks  (2023)</a></li>
+          <li><a href="project2.html" class="preview-link" data-image="images/icon-2.png">ABCs of Type  (2023)</a></li>
         </ul>
       </nav>
 
