--- a/project5.html
+++ b/project5.html
@@ -40,6 +40,7 @@
       <div class="contact">
         <p><a href="https://www.linkedin.com/in/beatricedlh/" target="_blank">LinkedIn</a></p>
         <p><a href="mailto:bdovallheureux@ocadu.com" target="_blank">Email</a></p>
+        <p><a href="images/HOME/Béatrice_DovalLHeureux-CV_2025_ENG.pdf" target="_blank">Resume</a></p>
       </div>
     </aside>
 
