--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           Béatrice is a Toronto-based graphic designer <br>
           in her fourth year at OCADU. Passionate about editorial, packaging, and web design, she is always eager to explore new mediums! 
           <br><br>
-          Portfolio currently underway but feel free to reach out in French or English.
+          Portfolio currently being updated...
         </p>
 
         <nav>
