--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@
 
         <nav>
           <ul>
-            <li><br><a href="project4.html" class="preview-link" data-image="images/icon-2.png">Ommateum  (2025)</a></li>
-            <li><a href="project5.html" class="preview-link" data-image="images/icon.png">7-7-7  (2024)</a></li>
-            <li><a href="project3.html" class="preview-link" data-image="images/icon.png">HookedOn  (2023)</a></li>
-            <li><a href="project1.html" class="preview-link" data-image="images/icon.png">Swiss Design Talks  (2023)</a></li>
-            <li><a href="project2.html" class="preview-link" data-image="images/icon-2.png">ABCs of Type  (2023)</a></li>
+            <li><br><a href="project6.html" class="preview-link" data-image="images/icon-2.png">yerba.haus <sup>TDB</sup></a></li>
+            <li><a href="project7.html" class="preview-link" data-image="images/icon.png">bom&sun <sup>TDB</sup></a></li>
+            <li><a href="project8.html" class="preview-link" data-image="images/icon-2.png">be my valentine <sup>TDB</sup></a></li>
+            <li><br><a href="project4.html" class="preview-link" data-image="images/icon.png">ommateum <sup>publication</sup></a></li>
+            <li><a href="project5.html" class="preview-link" data-image="images/icon-2.png">7-7-7 <sup>publication</sup></a></li>
+            <li><a href="project3.html" class="preview-link" data-image="images/icon.png">hookedon <sup>web</sup></a></li>
+            <li><a href="project1.html" class="preview-link" data-image="images/icon-2.png">swiss design talks <sup>poster</sup></a></li>
+            <li><a href="project2.html" class="preview-link" data-image="images/icon.png">ABCs of type <sup>publication</sup></a></li>
           </ul>
         </nav>
 
