--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 
         <nav>
           <ul>
-            <li><br><a href="project6.html" class="preview-link" data-image="images/icon-2.png">yerba.haus <i>TDB</i></a></li>
-            <li><a href="project7.html" class="preview-link" data-image="images/icon.png">bom&sun <i>TDB</i></a></li>
-            <li><a href="project8.html" class="preview-link" data-image="images/icon-2.png">be my valentine <i>TDB</i></a></li>
-            <li><a href="project4.html" class="preview-link" data-image="images/icon.png">ommateum <i>publication</i></a></li>
-            <li><a href="project5.html" class="preview-link" data-image="images/icon-2.png">7-7-7 <i>publication</i></a></li>
-            <li><a href="project3.html" class="preview-link" data-image="images/icon.png">hookedon <i>web</i></a></li>
-            <li><a href="project1.html" class="preview-link" data-image="images/icon-2.png">swiss design talks <i>poster</i></a></li>
-            <li><a href="project2.html" class="preview-link" data-image="images/icon.png">ABCs of type <i>publication</i></a></li>
+            <li><br><a href="project6.html" class="preview-link" data-image="images/icon-2.png">yerba.haus — TDB</a></li>
+            <li><a href="project7.html" class="preview-link" data-image="images/icon.png">bom&sun — TDB</a></li>
+            <li><a href="project8.html" class="preview-link" data-image="images/icon-2.png">be my valentine — TDB</a></li>
+            <li><a href="project4.html" class="preview-link" data-image="images/icon.png">ommateum — publication</a></li>
+            <li><a href="project5.html" class="preview-link" data-image="images/icon-2.png">7-7-7 — publication</a></li>
+            <li><a href="project3.html" class="preview-link" data-image="images/icon.png">hookedon — web</a></li>
+            <li><a href="project1.html" class="preview-link" data-image="images/icon-2.png">swiss design talks — poster</a></li>
+            <li><a href="project2.html" class="preview-link" data-image="images/icon.png">ABCs of type — publication</a></li>
           </ul>
         </nav>
 
