--- a/project7.html
+++ b/project7.html
@@ -5,7 +5,7 @@
   <title>bdlh</title>
 
   <!-- styles -->
-  <link rel="stylesheet" href="css/project1.css">
+  <link rel="stylesheet" href="css/project7.css">
   <link rel="stylesheet" href="https://use.typekit.net/otk1nwn.css">
   <link rel="icon" type="image/x-icon" href="images/icon.png">
 </head>
@@ -22,8 +22,7 @@
       </a>
 
       <p><br>
-        As part of my Typography 2 course, I created a series of posters on Swiss design. The project involved designing three posters for a fictional panel, featuring three major designers: Josef Müller-Brockmann, Max Miedinger, and Mike Joyce. <br><br>
-        I used a "paste-up" method to determine the placement of text and colours before recreating the layouts in InDesign.
+        In the fall 2025, ...
       </p>
 
       <nav>
@@ -69,8 +68,6 @@
         <img src="images/P1/POSTER_8.jpg" alt="Grid Image 1">
         <img src="images/P1/POSTER_4.jpg" alt="Grid Image 2">
         <img src="images/P1/POSTER_3.jpg" alt="Grid Image 3">
-        <img src="images/P1/POSTER_5.jpg" alt="Grid Image 4">
-        <img src="images/P1/POSTER_6.jpg" alt="Grid Image 5">
       </div>
 
       <!-- stacked project images -->
