--- a/project7.html
+++ b/project7.html
@@ -27,11 +27,14 @@
 
       <nav>
         <ul>
-          <li><br><a href="project4.html" class="preview-link" data-image="images/icon-2.png">Ommateum  (2025)</a></li>
-          <li><a href="project5.html" class="preview-link" data-image="images/icon.png">7-7-7  (2024)</a></li>
-          <li><a href="project3.html" class="preview-link" data-image="images/icon.png">HookedOn  (2023)</a></li>
-          <li><a href="project1.html" class="preview-link" data-image="images/icon.png">Swiss Design Talks  (2023)</a></li>
-          <li><a href="project2.html" class="preview-link" data-image="images/icon-2.png">ABCs of Type  (2023)</a></li>
+          <li><br><a href="project6.html" class="preview-link" data-image="images/icon-2.png">yerba.haus — TDB</a></li>
+            <li><a href="project7.html" class="preview-link" data-image="images/icon.png">bom&sun — TDB</a></li>
+            <li><a href="project8.html" class="preview-link" data-image="images/icon-2.png">be my valentine — TDB</a></li>
+            <li><a href="project4.html" class="preview-link" data-image="images/icon.png">ommateum — publication</a></li>
+            <li><a href="project5.html" class="preview-link" data-image="images/icon-2.png">7-7-7 — publication</a></li>
+            <li><a href="project3.html" class="preview-link" data-image="images/icon.png">hookedon — web</a></li>
+            <li><a href="project1.html" class="preview-link" data-image="images/icon-2.png">swiss design talks — poster</a></li>
+            <li><a href="project2.html" class="preview-link" data-image="images/icon.png">ABCs of type — publication</a></li>
         </ul>
       </nav>
 
@@ -49,13 +52,16 @@
       <!-- slideshow -->
       <div class="slideshow">
         <div class="slide active">
-          <img src="images/P1/POSTER_SCAN_1.jpg" alt="Slide 1">
+          <img src="images/P7/test.png" alt="Slide 1">
         </div>
         <div class="slide">
-          <img src="images/P1/POSTER_SCAN_2.jpg" alt="Slide 2">
+          <img src="images/P7/test4.png" alt="Slide 2">
         </div>
         <div class="slide">
-          <img src="images/P1/POSTER_SCAN_3.jpg" alt="Slide 3">
+          <img src="images/P7/plain3.png" alt="Slide 3">
+        </div>
+        <div class="slide">
+          <img src="images/P7/plain6.png" alt="Slide 4">
         </div>
 
         <!-- slideshow arrows -->
@@ -65,20 +71,23 @@
 
       <!-- grid of 15 images -->
       <div class="image-grid">
-        <img src="images/P1/POSTER_8.jpg" alt="Grid Image 1">
-        <img src="images/P1/POSTER_4.jpg" alt="Grid Image 2">
-        <img src="images/P1/POSTER_3.jpg" alt="Grid Image 3">
+        <img src="images/P7/dieline 1.png" alt="Grid Image 1">
+        <img src="images/P7/dieline 2.png" alt="Grid Image 2">
+        <img src="images/P7/dieline 3.png" alt="Grid Image 3">
       </div>
 
       <!-- stacked project images -->
       <div class="project">
-        <img src="images/P1/POSTER_IMG_1.jpg" alt="Project image 1">
+        <img src="images/P7/bom1.jpg" alt="Project image 1">
       </div>
       <div class="project">
-        <img src="images/P1/POSTER_IMG_2.jpg" alt="Project image 2">
+        <img src="images/P7/bom2.jpg" alt="Project image 2">
       </div>
       <div class="project">
-        <img src="images/P1/POSTER_IMG_3.jpg" alt="Project image 3">
+        <img src="images/P7/bom3.jpg" alt="Project image 3">
+      </div>
+      <div class="project">
+        <img src="images/P7/bom4.jpg" alt="Project image 4">
       </div>
 
       <!-- bottom navigation buttons -->
