--- a/project7.html
+++ b/project7.html
@@ -58,10 +58,10 @@
           <img src="images/P7/test4.png" alt="Slide 2">
         </div>
         <div class="slide">
-          <img src="images/P7/plain3.png" alt="Slide 3">
+          <img src="images/P7/plain 3.png" alt="Slide 3">
         </div>
         <div class="slide">
-          <img src="images/P7/plain6.png" alt="Slide 4">
+          <img src="images/P7/plain 6.png" alt="Slide 4">
         </div>
 
         <!-- slideshow arrows -->
@@ -78,16 +78,16 @@
 
       <!-- stacked project images -->
       <div class="project">
-        <img src="images/P7/bom1.jpg" alt="Project image 1">
+        <img src="images/P7/bom1.jpeg" alt="Project image 1">
       </div>
       <div class="project">
-        <img src="images/P7/bom2.jpg" alt="Project image 2">
+        <img src="images/P7/bom2.jpeg" alt="Project image 2">
       </div>
       <div class="project">
-        <img src="images/P7/bom3.jpg" alt="Project image 3">
+        <img src="images/P7/bom3.jpeg" alt="Project image 3">
       </div>
       <div class="project">
-        <img src="images/P7/bom4.jpg" alt="Project image 4">
+        <img src="images/P7/bom4.jpeg" alt="Project image 4">
       </div>
 
       <!-- bottom navigation buttons -->
