--- a/project4.html
+++ b/project4.html
@@ -29,11 +29,14 @@
 
       <nav>
         <ul>
-          <li><br><a href="project4.html" class="preview-link" data-image="images/icon-2.png">Ommateum  (2025)</a></li>
-          <li><a href="project5.html" class="preview-link" data-image="images/icon.png">7-7-7  (2024)</a></li>
-          <li><a href="project3.html" class="preview-link" data-image="images/icon.png">HookedOn  (2023)</a></li>
-          <li><a href="project1.html" class="preview-link" data-image="images/icon.png">Swiss Design Talks  (2023)</a></li>
-          <li><a href="project2.html" class="preview-link" data-image="images/icon-2.png">ABCs of Type  (2023)</a></li>
+          <li><br><a href="project6.html" class="preview-link" data-image="images/icon-2.png">yerba.haus — TDB</a></li>
+            <li><a href="project7.html" class="preview-link" data-image="images/icon.png">bom&sun — packaging</a></li>
+            <li><a href="project8.html" class="preview-link" data-image="images/icon-2.png">be my valentine — TDB</a></li>
+            <li><a href="project4.html" class="preview-link" data-image="images/icon.png">ommateum — publication</a></li>
+            <li><a href="project5.html" class="preview-link" data-image="images/icon-2.png">7-7-7 — publication</a></li>
+            <li><a href="project3.html" class="preview-link" data-image="images/icon.png">hookedon — web</a></li>
+            <li><a href="project1.html" class="preview-link" data-image="images/icon-2.png">swiss design talks — poster</a></li>
+            <li><a href="project2.html" class="preview-link" data-image="images/icon.png">ABCs of type — publication</a></li>
         </ul>
       </nav>
 
