--- a/project7.html
+++ b/project7.html
@@ -72,8 +72,8 @@
       <!-- grid of 15 images -->
       <div class="image-grid">
         <img src="images/P7/dieline 1.png" alt="Grid Image 1">
-        <img src="images/P7/dieline 2.png" alt="Grid Image 2">
-        <img src="images/P7/dieline 3.png" alt="Grid Image 3">
+        <img src="images/P7/2.png" alt="Grid Image 2">
+        <img src="images/P7/3.png" alt="Grid Image 3">
       </div>
 
       <!-- stacked project images -->
