--- a/project7.html
+++ b/project7.html
@@ -87,7 +87,7 @@
         <img src="images/P7/bom4.jpeg" alt="Project image 3">
       </div>
       <div class="project">
-        <img src="images/P7/bom3.jpeg" alt="Project image 4">
+        <img src="images/P7/bom5.png" alt="Project image 4">
       </div>
 
       <!-- bottom navigation buttons -->
