--- a/project7.html
+++ b/project7.html
@@ -5,7 +5,7 @@
   <title>bdlh</title>
 
   <!-- styles -->
-  <link rel="stylesheet" href="css/project1.css">
+  <link rel="stylesheet" href="css/project7.css">
   <link rel="stylesheet" href="https://use.typekit.net/otk1nwn.css">
   <link rel="icon" type="image/x-icon" href="images/icon.png">
 </head>
@@ -53,7 +53,7 @@
       <div class="slideshow">
         <div class="slide active">
           <img src="images/P7/test4.png" alt="Slide 1">
-        </div>
+        </div class="slide">
           <img src="images/P7/plain 3.png" alt="Slide 2">
         </div>
         <div class="slide">
