--- a/project7.html
+++ b/project7.html
@@ -53,14 +53,16 @@
       <div class="slideshow">
         <div class="slide active">
           <img src="images/P7/test4.png" alt="Slide 1">
-        </div class="slide">
-          <img src="images/P7/plain 3.png" alt="Slide 2">
-        </div>
-        <div class="slide">
-          <img src="images/P7/plain 6.png" alt="Slide 3">
         </div>
 
-        <!-- slideshow arrows -->
+        <div class="slide">
+          <img src="images/P7/plain%203.png" alt="Slide 2">
+        </div>
+
+        <div class="slide">
+          <img src="images/P7/plain%206.png" alt="Slide 3">
+        </div>
+
         <button class="prev">←</button>
         <button class="next">→</button>
       </div>
