--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
           Béatrice is a Toronto-based graphic designer <br>
           in her fourth year at OCADU. Passionate about editorial, packaging, and web design, she is always eager to explore new mediums! 
           <br><br>
-          Portfolio currently being updated...
         </p>
 
         <nav>
           <ul>
-            <li><br><a href="project6.html" class="preview-link" data-image="images/icon-2.png">yerba.haus — TDB</a></li>
-            <li><a href="project7.html" class="preview-link" data-image="images/icon.png">bom&sun — packaging</a></li>
-            <li><a href="project8.html" class="preview-link" data-image="images/icon-2.png">be my valentine — TDB</a></li>
+            <!-- <li><br><a href="project6.html" class="preview-link" data-image="images/icon-2.png">yerba.haus — TDB</a></li> -->
+            <li><br><a href="project7.html" class="preview-link" data-image="images/icon.png">bom&sun — packaging</a></li>
+            <!-- <li><a href="project8.html" class="preview-link" data-image="images/icon-2.png">be my valentine — TDB</a></li> -->
             <li><a href="project4.html" class="preview-link" data-image="images/icon.png">ommateum — publication</a></li>
             <li><a href="project5.html" class="preview-link" data-image="images/icon-2.png">7-7-7 — publication</a></li>
             <li><a href="project3.html" class="preview-link" data-image="images/icon.png">hookedon — web</a></li>
