--- a/project7.html
+++ b/project7.html
@@ -22,9 +22,11 @@
       </a>
 
       <p><br>
-        Created for Packaging Design 1, bom&sun is a collaborative skincare packaging project developed with Yuna Lee and Katelyn Tao. As a group we conceived as a hypothetical line of facial moisturizers, designed to support women through different stages of womanhood (menstruation, pregnancy, and menopause). Each SKU prioritizes clean, limited ingredients, and targets their skincare needs.
+        Created for Packaging Design 1, bom&sun is a collaborative skincare packaging project developed with Yuna Lee and Katelyn Tao. As a group we conceived as a hypothetical line of facial moisturizers, designed to support women through different stages of womanhood (menstruation, pregnancy, and menopause). Each SKU prioritizes clean, limited ingredients.
         <br><br>
-        The project brief focused on developing a brand identity, packaging system, and structure for a broad audience aged 15–65. The packaging form was thus designed to be accessible for users with limited mobility. A well, as the refillable pod system would the same container to be reused as users move through different stages of life, reducing waste while maintaining continuity across the product line.
+        The project brief focused on developing a brand identity and packaging system for a audience aged 15–65. As such, the packaging form was designed to be accessible for users with limited mobility. 
+        <br><br>
+        In addition, the refillable pod system would the same container to be reused as users move through different stages of life, ultimately reducing waste.
       </p>
 
       <nav>
