--- a/project7.html
+++ b/project7.html
@@ -26,7 +26,7 @@
         <br><br>
         The project brief focused on developing a brand identity and packaging system for a audience aged 15–65. As such, the packaging form was designed to be accessible for users with limited mobility. 
         <br><br>
-        In addition, the refillable pod system would the same container to be reused as users move through different stages of life, ultimately reducing waste.
+        In addition, the refillable pod system would allow the same container to be reused as users move through different stages of life, ultimately reducing waste.
       </p>
 
       <nav>
