--- a/project7.html
+++ b/project7.html
@@ -24,7 +24,7 @@
       <p><br>
         Created for Packaging Design 1, bom&sun is a collaborative skincare packaging project developed with Yuna Lee and Katelyn Tao. As a group we conceived as a hypothetical line of facial moisturizers, designed to support women through different stages of womanhood (menstruation, pregnancy, and menopause). Each SKU prioritizes clean, limited ingredients.
         <br><br>
-        The project brief focused on developing a brand identity and packaging system for a audience aged 15–65. As such, the packaging form was designed to be accessible for users with limited mobility. 
+        The project brief focused on developing a brand identity and packaging system for a audience aged 15–65. As such, the packaging form was designed to be accessible for users with limited mobility and vision (Navilens on PDP). 
         <br><br>
         In addition, the refillable pod system would allow the same container to be reused as users move through different stages of life, ultimately reducing waste.
       </p>
